# basicmicro_ros2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  arm_demo.py  debug_speed_accuracy.py  install.sh  package.xml  rover_demo.py  setup.cfg  setup.py  setup_ros2.sh  uninstall_ROS2.sh
.github/workflows/: test.yml
basicmicro_driver/: __init__.py  arm_node.py  basicmicro_node.py  buffer_manager.py  diagnostic_publisher.py  distance_movement_service.py  duty_control_service.py  hardware_interface.py  motion_config_service.py  performance_monitor.py  servo_position_service.py  trajectory_monitor.py  trajectory_service.py  unit_converter.py
config/: arm_controllers.yaml  custom_controllers.yaml  diff_drive_controllers.yaml  example_robot_parameters.yaml  industrial_controllers.yaml  multi_controller_controllers.yaml
docs/: architecture.md  arm_example.md  configuration.md  control_methods.md  dev_quick_start.md  hardware_interface.md  hardware_tests.md  hardware_validation.md  installation.md  integration_tests.md  motor_controller_setup.md  navigation_integration.md  performance_tests.md  post_install_testing.md  quick_start.md  rover_example.md  service_api.md  system_wide_quick_start.md  testing_overview.md  unit_tests.md  venv_quick_start.md  wsl_comport_setup.md
examples/: programmatic_control.py
launch/: arm_control.launch.py  basicmicro_driver.launch.py  basicmicro_simple.launch.py  robot_visualization.launch.py
msg/: PositionPoint.msg  TrajectoryPoint.msg
rviz/: basicmicro_robot.rviz
srv/: ExecutePositionSequence.srv  ExecuteTrajectory.srv  GetAvailableHomingMethods.srv  GetPositionLimits.srv  GetServoStatus.srv  MoveDistance.srv  MoveToAbsolutePosition.srv  PerformHoming.srv  ReleasePositionHold.srv  SetDutyCycle.srv  SetDutyCycleAccel.srv  SetHomingConfiguration.srv  SetMotionParameters.srv  SetMotionStrategy.srv  SetPositionLimits.srv
test/: conftest.py  test_buffer_manager.py  test_diagnostic_publisher.py  test_distance_movement_service.py  test_distance_movement_simple.py  test_duty_control_service.py  test_enhanced_diagnostics.py  test_framework_structure.md  test_hardware_interface.py  test_launch_files.py  test_motion_config_service.py  test_package_structure.py  test_performance_monitor.py  test_runner.py  test_servo_position_service.py  test_trajectory_monitor.py  test_trajectory_service.py  test_trajectory_simple.py  test_unit_converter.py  test_urdf_examples.py
test/hardware/: test_real_controller_hardware.py
test/integration/: test_complete_workflow_integration.py
test/performance/: test_buffer_performance.py  test_command_latency_performance.py  test_hardware_latency_measurement.py  test_hardware_stress_performance.py  test_throughput_validation.py
test/regression/: test_functionality_regression.py
test/test_data/: performance_baselines.json
test/unit/: test_hardware_interface_unit.py  test_services_unit.py
test_mocks/: __init__.py  mock_basicmicro.py
urdf/: custom_robot_template.urdf.xacro  differential_drive_robot.urdf.xacro  industrial_robot.urdf.xacro  multi_controller_robot.urdf.xacro  two_axis_arm.urdf.xacro
